# Bangumi_Auto_Rename

./: .gitignore  README.md  pyproject.toml
src/: Bangumi_Auto_Rename.py
