[project]
name = "Bangumi_Auto_Rename"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "KimigaiiWuyi", email = "444835641@qq.com"},
]
dependencies = [
    "jikanpy>=4.3.2",
    "tmdbsimple>=2.9.1",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "GPLv3"}


[tool.pdm]
distribution = false
